@@ -10,6 +10,7 @@ import org.springframework.transaction.annotation.Transactional;
 import com.devdiluter.dslist.dto.GameDTO;
 import com.devdiluter.dslist.dto.GameMinDTO;
 import com.devdiluter.dslist.entities.Game;
+import com.devdiluter.dslist.projections.GameMinProjection;
 import com.devdiluter.dslist.repositories.GameRepository;
 
 @Service
@@ -26,6 +27,14 @@ public class GameService {
     @Transactional(readOnly = true)
     public List<GameMinDTO> findAll() {
         List<Game> result = gameRepository.findAll();
-        return result.stream().map(GameMinDTO::new).collect(Collectors.toList());
+        return result.stream().map(x -> new GameMinDTO(x)).toList();
     }
+
+    @Transactional(readOnly = true)
+    public List<GameMinDTO> findByList(Long listId) {
+        List<GameMinProjection> result = gameRepository.searchByList(listId);
+        return result.stream().map(x -> new GameMinDTO(x)).toList();
+    }
+    
 }
+
